# PRISM_Agent_LITL_experiments

./: .gitignore  .pre-commit-config.yaml  ROADMAP.md  config.schema.json  config.yml.example  config.yml.template  pyproject.toml  pytest.ini
analysis/: README.md  nbconvert_all.sh  pyproject.toml
analysis/0.data_wrangling/: 0.1.wrangle_depmap_prism_data.ipynb
analysis/1.run_agentic_systems/: 1.0.run_demo_toolless_agentic_system.ipynb
analysis/1.run_agentic_systems/nbconverted/: 1.0.run_demo_toolless_agentic_system.py
analysis/log/demo/toolless/HUCCT1_BILIARY_TRACT/: step=100;ccle=HUCCT1_BILIARY_TRACT;shuffle=True;seed=42;model=openai_gpt-5-nano;temperature=1.0;max_tokens=20000;seed=42.jsonl
analysis/log/toolless/HUCCT1_BILIARY_TRACT/: step=100;ccle=HUCCT1_BILIARY_TRACT;shuffle=True;seed=42;model=openai_gpt-5-nano;temperature=1.0;max_tokens=20000;seed=42.jsonl
analysis/notebooks/0.data_wrangling/: 0.1.wrangle_depmap_prism_data.ipynb
analysis/notebooks/1.run_agents/1.1.run_agents_demo/: 1.1.1.run_toolless_gpt5nano_agent.ipynb  1.1.2.run_toolless_llama318b_agent.ipynb  1.1.final.visualize_error.ipynb
analysis/scripts/0.data_wrangling/: 0.1.wrangle_depmap_prism_data.py
analysis/scripts/1.run_agents/1.1.run_agents_demo/: 1.1.1.run_toolless_gpt5nano_agent.py  1.1.2.run_toolless_llama318b_agent.py  1.1.final.visualize_error.py
analysis/src/nbutils/: pathing.py  utils.py
modal/: README.md  deploy_llama31_8b.py
tests/agentic_system/tasks/: conftest.py  test_dataloader.py  test_dispatcher.py
tests/analysis/: test_wrangle_depmap_prism.py
(+49 files in other folders)
